# iranian-marketplaces-sdk

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
src/iranian_marketplaces_sdk/: __init__.py  _http.py  base_async_client.py  base_client.py  exceptions.py
src/iranian_marketplaces_sdk/basalam/: __init__.py  async_engine.py  constants.py  engine.py
src/iranian_marketplaces_sdk/basalam/types/: __init__.py  common.py  discounts.py  parcels.py  products.py
src/iranian_marketplaces_sdk/digikala/: __init__.py  async_engine.py  constants.py  engine.py
src/iranian_marketplaces_sdk/digikala/types/: __init__.py  auth.py  common.py  health.py  inventories.py  invoices.py  orders.py  packages.py  pricing.py  variants.py
src/iranian_marketplaces_sdk/snapp/: __init__.py  async_engine.py  constants.py  engine.py
src/iranian_marketplaces_sdk/snapp/types/: __init__.py  common.py  orders.py  products.py
src/iranian_marketplaces_sdk/tapsi/: __init__.py  async_engine.py  constants.py  engine.py
src/iranian_marketplaces_sdk/tapsi/types/: __init__.py  common.py  orders.py  products.py
